--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
   <div id="toast-container"></div>
 
   <footer class="bg-white mt-8 py-4 text-center text-sm text-gray-500 border-t">
-    Versão 7.1 (Navegação Corrigida)
+    Versão 7.1 (Navegação Corrigida) Power By Brendon
   </footer>
 
   <script type="module">
