--- a/index.html
+++ b/index.html
@@ -596,6 +596,14 @@
         </div>
     </div>
 
+    <div id="printLoadingOverlay" style="position: fixed; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(var(--tertiary-color-rgb, 0, 0, 0), 0.7); z-index: 10001; display: none; flex-direction: column; align-items: center; justify-content: center; transition: opacity 0.3s ease; opacity: 0; backdrop-filter: blur(5px);">
+    <div class="spinner-border text-primary" role="status" style="width: 3rem; height: 3rem;">
+        <span class="visually-hidden">Loading...</span>
+    </div>
+    <p class="mt-3" style="color: var(--text-color);">Preparando impressão...</p>
+</div>
+
+    
     <script type="application/json" id="manifest-data">
         {
             "name": "Centrar Workcell",
