--- a/index.html
+++ b/index.html
@@ -194,6 +194,7 @@
                         </button>
                     </div>
                     <div class="extra-value-container mx-auto" id="valorExtraContainer" style="max-width: 400px;">
+                        <h4 class="mt-2 text-center" id="aparelhoPrecoTotalDisplay"></h4>
                         <div class="mb-3">
                             <label class="form-label" for="valorExtraAparelho"><i class="bi bi-plus-circle"></i> Valor adicional</label>
                             <input class="form-control" id="valorExtraAparelho" min="0" placeholder="Ex: 40,00" step="0.01" type="number"/>
